--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,6 +16,7 @@
     <string name="msg_port">5222</string>
     <string name="msg_service">medicenter.org</string>
     <string name="gender_prompt">Patient Gender</string>
+    <string name="meeting_settings">Add Meeting</string>
 
 
 </resources>
